# teste-tecnico-pleno-rpa

./: .dockerignore  .gitignore  README.md  docker-compose.yml
app/crawler-api/: main.py  models.py  pyproject.toml
app/crawler-api/tests/: test_main.py  test_models.py
app/crawler-oscar/: main.py  models.py  pyproject.toml  scraper.py
app/crawler-oscar/tests/: test_main.py  test_models.py  test_scraper.py
docker/: api.dockerfile  oscar.dockerfile
